--- a/examples/ctest/Makefile
+++ b/examples/ctest/Makefile
@@ -3,7 +3,6 @@ include $(N64_INST)\include\crossplatform.mk
 else
 include $(N64_INST)/include/crossplatform.mk
 endif
-include $(call FIXPATH,$(N64_INST)/include/n64.mk)
 
 all: ctest.z64
 .PHONY: all
@@ -11,7 +10,7 @@ all: ctest.z64
 BUILD_DIR = build
 include $(call FIXPATH,$(N64_INST)/include/n64.mk)
 
-OBJS = $(call FIXPATH,$(BUILD_DIR)/ctest.o)
+OBJS = $(BUILD_DIR)/ctest.o
 
 ctest.z64: N64_ROM_TITLE = "Controller Test"
 
