--- a/examples/rtctest/Makefile
+++ b/examples/rtctest/Makefile
@@ -1,8 +1,15 @@
+ifdef SystemRoot
+include $(N64_INST)\include\crossplatform.mk
+else
+include $(N64_INST)/include/crossplatform.mk
+endif
+
+
 all: rtctest.z64
 .PHONY: all
 
 BUILD_DIR = build
-include $(N64_INST)/include/n64.mk
+include $(call FIXPATH,$(N64_INST)/include/n64.mk)
 
 OBJS = $(BUILD_DIR)/rtctest.o
 
@@ -12,7 +19,7 @@ rtctest.z64: N64_ROM_RTC = true
 $(BUILD_DIR)/rtctest.elf: $(OBJS)
 
 clean:
-	rm -rf $(BUILD_DIR) *.z64
+	$(RM) $(BUILD_DIR) *.z64
 .PHONY: clean
 
 -include $(wildcard $(BUILD_DIR)/*.d)
