--- a/examples/spritemap/Makefile
+++ b/examples/spritemap/Makefile
@@ -1,8 +1,14 @@
+ifdef SystemRoot
+include $(N64_INST)\include\crossplatform.mk
+else
+include $(N64_INST)/include/crossplatform.mk
+endif
+
 all: spritemap.z64
 .PHONY: all
 
 BUILD_DIR = build
-include $(N64_INST)/include/n64.mk
+include $(call FIXPATH,$(N64_INST)/include/n64.mk)
 
 OBJS = $(BUILD_DIR)/spritemap.o
 
@@ -13,7 +19,7 @@ $(BUILD_DIR)/spritemap.dfs: $(wildcard filesystem/*)
 $(BUILD_DIR)/spritemap.elf: $(OBJS)
 
 clean:
-	rm -rf $(BUILD_DIR) *.z64
+	$(RM) $(BUILD_DIR) *.z64
 .PHONY: clean
 
 -include $(wildcard $(BUILD_DIR)/*.d)
