--- a/examples/ucodetest/Makefile
+++ b/examples/ucodetest/Makefile
@@ -1,8 +1,14 @@
+ifdef SystemRoot
+include $(N64_INST)\include\crossplatform.mk
+else
+include $(N64_INST)/include/crossplatform.mk
+endif
+
 all: ucodetest.z64
 .PHONY: all
 
 BUILD_DIR = build
-include $(N64_INST)/include/n64.mk
+include $(call FIXPATH,$(N64_INST)/include/n64.mk)
 
 OBJS = $(BUILD_DIR)/ucodetest.o $(BUILD_DIR)/rsp_basic.o
 
@@ -11,7 +17,7 @@ ucodetest.z64: N64_ROM_TITLE = "UCode Test"
 $(BUILD_DIR)/ucodetest.elf: $(OBJS)
 
 clean:
-	rm -rf $(BUILD_DIR) *.z64
+	$(RM) $(BUILD_DIR) *.z64
 .PHONY: clean
 
 -include $(wildcard $(BUILD_DIR)/*.d))
